--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -15,11 +15,17 @@ h1 {
   text-align: center;
   padding: 20px 0 0 0;
 }
-footer {
+.last-updated {
   font-size: 10px;
-  margin: 5px 0 0;
+  margin: 5px 15px 0 0;
   padding: 5px 0 0;
   text-align: right;
+}
+.coded-by {
+  font-size: 10px;
+  margin: 5px 0 0 15px;
+  padding: 5px 0 0;
+  text-align: left;
 }
 #current-temp,
 #current-status {
