--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -5,7 +5,7 @@ body {
   border: 1px solid black;
   border-radius: 20px;
   font-family: "Barlow", sans-serif;
-  background-color: #fffaf5;
+  background-color: #fff;
 }
 form {
   font-family: "Barlow", sans-serif;
@@ -14,6 +14,18 @@ h1 {
   font-size: 60px;
   text-align: center;
   padding: 20px 0 0 0;
+}
+#current-location {
+  border: 1px solid #000;
+  background-color: #c2c1c1bd;
+  border-radius: 5px;
+  transition: all 200ms ease;
+  cursor: pointer;
+}
+#current-location:hover {
+  background-color: #000;
+  color: #c2c1c1bd;
+  border: 1px solid #c2c1c1bd;
 }
 .last-updated {
   font-size: 10px;
@@ -47,7 +59,7 @@ h1 {
 }
 .navbar {
   border-radius: 10px;
-  background-color: #faf0e7;
+  background-color: #c2c1c1bd;
   width: 100%;
 }
 .temp-details li {
@@ -61,7 +73,7 @@ h1 {
 .fahrenheit,
 .celsius {
   border: 1px solid rgb(138, 137, 137);
-  background-color: #faf0e7;
+  background-color: #c2c1c1bd;
   border-radius: 5px;
   transition: all 200ms ease;
   box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
@@ -69,13 +81,13 @@ h1 {
 }
 .fahrenheit:hover {
   background-color: #000;
-  color: #faf0e7;
-  border: 1px solid #faf0e7;
+  color: #c2c1c1bd;
+  border: 1px solid #c2c1c1bd;
 }
 .celsius:hover {
   background-color: #000;
-  color: #faf0e7;
-  border: 1px solid #faf0e7;
+  color: #c2c1c1bd;
+  border: 1px solid #c2c1c1bd;
 }
 
 .todayDate {
@@ -86,5 +98,5 @@ h1 {
   text-align: center;
   border: 0;
   border-radius: 10px;
-  background-color: #faf0e7;
+  background-color: #c2c1c1bd;
 }
