--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -5,7 +5,7 @@ body {
   border: 1px solid black;
   border-radius: 20px;
   font-family: "Barlow", sans-serif;
-  background-color: #fff;
+  background-color: #c8e3fc;
 }
 form {
   font-family: "Barlow", sans-serif;
@@ -14,18 +14,19 @@ h1 {
   font-size: 60px;
   text-align: center;
   padding: 20px 0 0 0;
+  font-weight: 100;
 }
 #current-location {
   border: 1px solid #000;
-  background-color: #c2c1c1bd;
+  background-color: #a2d2ff;
   border-radius: 5px;
   transition: all 200ms ease;
   cursor: pointer;
 }
 #current-location:hover {
   background-color: #000;
-  color: #c2c1c1bd;
-  border: 1px solid #c2c1c1bd;
+  color: #a2d2ff;
+  border: 1px solid #a2d2ff;
 }
 .last-updated {
   font-size: 10px;
@@ -44,6 +45,7 @@ h1 {
   text-align: center;
   padding: 20px 0 0 0;
   margin: 0 auto;
+  font-weight: 300;
 }
 #current-status {
   padding: 0;
@@ -56,10 +58,11 @@ h1 {
 }
 #description {
   text-transform: capitalize;
+  font-weight: 600;
 }
 .navbar {
   border-radius: 10px;
-  background-color: #c2c1c1bd;
+  background-color: #a2d2ff;
   width: 100%;
 }
 .temp-details li {
@@ -73,21 +76,27 @@ h1 {
 .fahrenheit,
 .celsius {
   border: 1px solid rgb(138, 137, 137);
-  background-color: #c2c1c1bd;
+  background-color: #b4dbff;
+  margin: 7px 0 0 0;
   border-radius: 5px;
   transition: all 200ms ease;
-  box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
   cursor: pointer;
 }
 .fahrenheit:hover {
   background-color: #000;
-  color: #c2c1c1bd;
-  border: 1px solid #c2c1c1bd;
+  color: #b4dbff;
+  border: 1px solid #b4dbff;
 }
 .celsius:hover {
   background-color: #000;
-  color: #c2c1c1bd;
-  border: 1px solid #c2c1c1bd;
+  color: #b4dbff;
+  border: 1px solid #b4dbff;
+}
+
+#search-button:hover {
+  background-color: #000;
+  color: #b4dbff;
+  border: 1px solid #b4dbff;
 }
 
 .todayDate {
@@ -98,5 +107,9 @@ h1 {
   text-align: center;
   border: 0;
   border-radius: 10px;
-  background-color: #c2c1c1bd;
+  background-color: #b4dbff;
+}
+
+#date {
+  font-weight: 600;
 }
